--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>WTF-CODER Login</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <div class="form-container">
@@ -13,8 +13,9 @@
       <input type="password" id="password" placeholder="Password" required />
       <button type="submit">Login</button>
     </form>
-    <p>Don't have an account? <a href="pages/signup.html">Sign Up</a></p>
+    <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
   </div>
   <script src="assets/js/auth.js"></script>
 </body>
 </html>
+
