--- a/frontend/pages/signup.html
+++ b/frontend/pages/signup.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>WTF-CODER Signup</title>
-  <link rel="stylesheet" href="../assets/css/style.css">
-  <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <div class="form-container">
@@ -14,9 +14,9 @@
       <input type="password" id="password" placeholder="Password" required />
       <button type="submit">Sign Up</button>
     </form>
-    <p>Already have an account? <a href="../index.html">Login</a></p>
+    <p>Already have an account? <a href="/index.html">Login</a></p>
   </div>
-  <script src="../assets/js/auth.js"></script>
+  <script src="/assets/js/auth.js"></script>
 </body>
 </html>
 
