--- a/frontend/pages/editor.html
+++ b/frontend/pages/editor.html
@@ -3,8 +3,8 @@
 <head>
   <title>WTF-CODER Editor</title>
   <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.43.0/min/vs/loader.js"></script>
-  <link rel="stylesheet" href="../assets/css/style.css">
-  <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <div class="editor-container">
@@ -16,6 +16,6 @@
     </div>
     <div id="editor" class="editor-area"></div>
   </div>
-  <script src="../assets/js/editor.js"></script>
+  <script src="/assets/js/editor.js"></script>
 </body>
 </html>
