--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>WTF-CODER Dashboard</title>
-  <link rel="stylesheet" href="../assets/css/style.css">
-  <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <div class="form-container">
@@ -15,6 +15,6 @@
       <button type="submit">Create</button>
     </form>
   </div>
-  <script src="../assets/js/dashboard.js"></script>
+  <script src="/assets/js/dashboard.js"></script>
 </body>
 </html>
