--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>WTF-CODER Login</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/login.css">
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
