--- a/frontend/pages/signup.html
+++ b/frontend/pages/signup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>WTF-CODER Signup</title>
-  <link rel="stylesheet" href="/assets/css/login.css">
+  <link rel="stylesheet" href="/assets/css/signup.css">
   <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
