--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
   <title>WTF-CODER Login</title>
   <link rel="stylesheet" href="assets/css/login.css">
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+  <iframe id="preview" class="w-full h-[500px] border border-gray-200 rounded mt-4"></iframe>
 </head>
 <body>
   <div class="form-container">
