--- a/frontend/pages/editor.html
+++ b/frontend/pages/editor.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Editor</title>
-  <link rel="stylesheet" href="/assets/cssstyle.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.43.0/min/vs/loader.js"></script>
 </head>
 <body>
