--- a/frontend/pages/editor.html
+++ b/frontend/pages/editor.html
@@ -21,7 +21,7 @@
     <div id="editor" class="editor"></div>
     <iframe id="output" class="output"></iframe>
   </div>
-  <script src="/assets/js/script.js"></script>
+  <script src="/assets/js/editor.js"></script>
 </body>
 </html>
 
