--- a/frontend/pages/feedback.html
+++ b/frontend/pages/feedback.html
@@ -21,24 +21,24 @@
       <h2>✨ Creators ✨</h2>
       <div class="creators">
         <div class="creator-card">
-          <h3>Harsh</h3>
+          <h3>Harsh.M</h3>
           <p>Main Developer & Designer</p>
         </div>
         <div class="creator-card">
-          <h3>A.I. GPT-4o</h3>
-          <p>Assistant Developer & Code Support</p>
+          <h3>Aryan.P</h3>
+          <p>Idea Giver & A Support Develope</p>
         </div>
       </div>
 
       <h2>🎓 Special Thanks</h2>
       <div class="teachers">
         <div class="teacher-card">
-          <h3>Mr. Patil</h3>
-          <p>Computer Science Mentor</p>
+          <h3>Mr. Kedari Mam</h3>
+          <p>Information Technology Mentor</p>
         </div>
         <div class="teacher-card">
-          <h3>Mrs. Sharma</h3>
-          <p>Inspiration & Support</p>
+          <h3>ChatGPT</h3>
+          <p>Helped in Web Hosting</p>
         </div>
       </div>
     </div>
