--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,8 @@
   <title>WTF-CODER Login</title>
   <link rel="stylesheet" href="assets/css/login.css">
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
   <div class="form-container">
