--- a/frontend/pages/editor.html
+++ b/frontend/pages/editor.html
@@ -5,6 +5,7 @@
   <title>Editor</title>
   <link rel="stylesheet" href="/assets/css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.43.0/min/vs/loader.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <div class="editor-container">
