--- a/frontend/pages/feedback.html
+++ b/frontend/pages/feedback.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Feedback - WTF Coder</title>
   <link rel="stylesheet" href="/assets/css/feedback.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
   <div class="container">
