--- a/frontend/pages/feedback.html
+++ b/frontend/pages/feedback.html
@@ -35,7 +35,7 @@
       <h2>🎓 Special Thanks</h2>
       <div class="teachers">
         <div class="teacher-card">
-          <h3>Mr. Kedari Mam</h3>
+          <h3>Mrs. Kedari Mam</h3>
           <p>Information Technology Mentor</p>
         </div>
         <div class="teacher-card">
